--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -57,4 +57,5 @@ are great, too.
 - link:IIInjectionAndScopes.asciidoc[II - Injection and scopes]
 - link:CreatingSecureVaadinApplicationsUsingJEE6.asciidoc[Creating secure Vaadin applications using JEE6]
 - link:UsingVaadinCDIWithJAASAuthentication.asciidoc[Using Vaadin CDI with JAAS authentication]
+- link:LoadTestingWithGatling.asciidoc[Load testing with Gatling]
 - link:CreatingAUIExtension.asciidoc[Creating a UI extension]
