--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -64,3 +64,4 @@ are great, too.
 - link:ValoExamples.asciidoc[Valo examples]
 - link:ReadOnlyVsDisabledFields.asciidoc[Read-only vs Disabled fields]
 - link:CreatingAUIExtension.asciidoc[Creating a UI extension]
+- link:CreatingAThemeUsingSass.asciidoc[Creating a theme using Sass]
