--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -63,5 +63,6 @@ are great, too.
 - link:DynamicallyInjectingCSS.asciidoc[Dynamically injecting CSS]
 - link:ValoExamples.asciidoc[Valo examples]
 - link:ReadOnlyVsDisabledFields.asciidoc[Read-only vs Disabled fields]
+- link:ValoThemeGettingStarted.asciidoc[Valo theme - Getting started]
 - link:CreatingAUIExtension.asciidoc[Creating a UI extension]
 - link:CreatingAThemeUsingSass.asciidoc[Creating a theme using Sass]
