--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -75,5 +75,6 @@ are great, too.
 - link:VisuallyDistinguishPrimaryActions.asciidoc[Visually distinguish primary actions]
 - link:LabelButtonsExpressively.asciidoc[Label buttons expressively]
 - link:CreatingAServlet3.0Application.asciidoc[Creating a servlet 3.0 application]
+- link:CreatingAnEclipseProject.asciidoc[Creating an Eclipse project]
 - link:CreatingAUIExtension.asciidoc[Creating a UI extension]
 - link:CreatingAThemeUsingSass.asciidoc[Creating a theme using Sass]
